--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,10 @@ li {
   text-align: center;
 }
 
+footer {
+  color: rgba(255,255,255,.8);
+}
+
 @media only screen and (max-width : 992px) {
   .parallax-container .section {
     position: absolute;
