--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ li {
 .pic {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 100px;
+  margin-top: 50px;
   margin-bottom: 30px;
   border-radius: 10%;
 }
@@ -123,6 +123,9 @@ footer {
 @media only screen and (min-width : 750px) {
   .front-12 {
     font-size: 1rem;
+  }
+  .pic {
+    margin-top: 100px;
   }
 }
 
