--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ li {
 }
 
 #about-list {
-  margin-bottom: 8rem;
+  margin-bottom: 7rem;
 }
 
 .front-12 {
@@ -126,6 +126,9 @@ footer {
   }
   .pic {
     margin-top: 100px;
+  }
+  #about-list {
+    margin-bottom: 4.5rem;
   }
 }
 
